--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
               <li class="nav-item">
                 <a class="nav-link text-light" href="#contato">Contato</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="blog.html">Blog</a>
+              </li>
             </ul>
-            <form class="d-flex gap-3" role="search">
-              <a href="" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-              <a href="https://www.instagram.com/joao_viacelli/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/jo%C3%A3o-gabriel-vosgerau/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-            </form>
+            <a href="" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/joao_viacelli/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/jo%C3%A3o-gabriel-vosgerau/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
           </div>
         </div>
       </nav>
@@ -155,6 +156,18 @@
                   </li>
                   <li class="list-group-item bg-black text-white h3 d-flex justify-content-between">
                     <a href="#"><strong>Inovações em automação: cases e tendências para 2024</strong></a>
+                    <span class="h5" style="opacity: .5;">em breve</span>
+                  </li>
+                  <li class="list-group-item bg-black text-white h3 d-flex justify-content-between">
+                    <a href="#"><strong>Manutenção preditiva: como antecipar problemas e evitar paradas</strong></a>
+                    <span class="h5" style="opacity: .5;">em breve</span>
+                  </li>
+                  <li class="list-group-item bg-black text-white h3 d-flex justify-content-between">
+                    <a href="#"><strong>Segurança no trabalho: a importância da NR-12</strong></a>
+                    <span class="h5" style="opacity: .5;">em breve</span>
+                  </li>
+                  <li class="list-group-item bg-black text-white h3 d-flex justify-content-between">
+                    <a href="#"><strong>Automação industrial: benefícios e desafios</strong></a>
                     <span class="h5" style="opacity: .5;">em breve</span>
                   </li>
                 </ul>
