--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <a class="nav-link text-light" href="blog.html">Blog</a>
               </li>
             </ul>
-            <a href="" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/joao_viacelli/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/jo%C3%A3o-gabriel-vosgerau/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="" target="_blank"><i class="fa-brands fa-facebook me-4" style="font-size: 2rem;"></i></a>
+            <a href="https://www.instagram.com/joao_viacelli/" target="_blank"><i class="fa-brands fa-instagram me-4" style="font-size: 2rem;"></i></a>
+            <a href="https://www.linkedin.com/in/jo%C3%A3o-gabriel-vosgerau/" target="_blank"><i class="fa-brands fa-linkedin" style="font-size: 2rem;"></i></a>
           </div>
         </div>
       </nav>
