--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   </head>
-  <body class="bg-black">
+  <body class="bg-black" style="font-family: 'Times New Roman', Times, serif, sans;">
     <div class="container text-light">
       <nav class="navbar navbar-expand-lg bg-body-black">
         <div class="container-fluid">
@@ -16,7 +16,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse text-light" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: 1.4rem;">
               <li class="nav-item">
                 <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
               </li>
