mudei a seção sobre

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       
       <!-- Seção Sobre -->
       <div class="row text-center mb-5" id="sobre">
-        <h1>Sobre</h1>
       </div>
       <div class="row align-items-center mb-5">
-        <div class="col text-end h4" style="opacity: 0.75;">
-          <p>
+        <div class="col text-center h4" >
+          <h2 class="h1 mb-4">Sobre</h2>
+          <p style="opacity: 0.75;">
             Com uma sólida formação em engenharia mecânica, nossa empresa se dedica a oferecer soluções personalizadas e inovadoras para o setor industrial. Unindo tecnologia, sustentabilidade e precisão, desenvolvemos projetos que otimizam processos e reduzem custos, sempre com o compromisso de superar as expectativas dos nossos clientes.
           </p>
         </div>
